<resources>
    <!-- LABEL -->
    <string name="app_name">Song Rank Maker</string>
    <string name="activity_main_label">Song Rank Maker - Home</string>
    <string name="activity_song_database_label">Song Database</string>
    <string name="activity_add_song_label">Add Song</string>
    <string name="activity_edit_song_label">Edit Song</string>
    <string name="activity_settings_label">Settings</string>
    <string name="activity_rankings_label">Ranking List</string>
    <string name="activity_add_ranking_label">Add Ranking</string>
    <string name="activity_view_ranking_label">Ranking</string>

    <!-- ACTIVITY -->
    <string name="activity_main_button_song_database">Song Database</string>
    <string name="activity_main_button_rankings">Rankings</string>
    <string name="activity_main_button_settings">Settings</string>
    <string name="activity_add_song_textview_song_title">Song Title</string>
    <string name="activity_add_song_textview_song_artist">Artist</string>
    <string name="activity_add_song_button_add_song">Add Song</string>
    <string name="activity_add_song_spinner_existing_artist_default">= Quick Select =</string>
    <string name="activity_edit_song_textview_song_title">Song Title</string>
    <string name="activity_edit_song_textview_song_artist">Artist</string>
    <string name="activity_edit_song_button_add_song">Edit Song</string>
    <string name="activity_add_ranking_button_add_ranking">Add Ranking</string>

    <!-- MENU -->
    <string name="menu_float_song_database_search_in_youtube">Search in Youtube</string>
    <string name="menu_float_song_database_delete">Delete</string>
    <string name="menu_float_song_database_edit">Edit</string>
    <string name="menu_song_database_add">Add</string>
    <string name="menu_song_database_sort_title">Sort Title</string>

    <!-- PREFERENCE -->
    <string name="preferences_sort_artist">Sort Song Artist</string>
    <string name="preferences_sort_artist_toast_true">Sorted by song artist.</string>
    <string name="preferences_sort_artist_toast_false">Sorted by default (Date added).</string>
    <string name="menu_rankings_add_ranking">Create New Ranking</string>
    <string name="activity_add_ranking_textview_ranking_name">Name of Ranking</string>
    <string name="menu_float_rankings_show_ranking">Show Ranking</string>
    <string name="menu_float_rankings_edit_ranking_name">Edit Name</string>
    <string name="menu_float_rankings_delete_ranking">Delete</string>
    <string name="preferences_sort_ranking_name">Sort Ranking Name</string>
    <string name="preferences_sort_ranking_name_toast_true">Sorted by ranking name.</string>
    <string name="preferences_sort_ranking_name_toast_false">Sorted by default (Date added).</string>
    <string name="activity_add_song_button_add_song_toast">has been added to the list.</string>
    <string name="activity_add_ranking_button_add_ranking_toast">has been added to the list.</string>
    <string name="activity_custom_row_rankings_song_count_desc">Number of Songs :</string>
    <string name="activity_song_database_delete_song_dialog_message">Are you sure you want to delete this song?</string>
    <string name="activity_rankings_delete_ranking_dialog_message">Are you sure you want to delete this ranking?</string>
    <string name="menu_song_database_assign_rank">Assign Rank</string>
    <string name="menu_view_ranking_rearrange_all">Rearrange All</string>
    <string name="menu_view_ranking_finish_rearranging">Finish Rearranging</string>
    <string name="activity_view_ranking_toast_rearrange_all">Please click multiple song from first to last.</string>
    <string name="activity_view_ranking_toast_finish_rearranging">You have rearranged the ranking.</string>
    <string name="menu_view_ranking_rearrange_reset">Reset</string>
    <string name="menu_float_view_ranking_remove_from_ranking">Remove From Ranking</string>
    <string name="activity_view_ranking_remove_from_ranking_dialog_message">Are you sure you want to remove this song from ranking?</string>
    <string name="activity_song_database_delete_song_toast_after">has been deleted.</string>
    <string name="activity_view_ranking_remove_from_ranking_toast_after">has been removed.</string>
    <string name="activity_view_ranking_remove_from_ranking_dialog_title">Remove Song from Ranking</string>
    <string name="menu_song_database_finish_checking">Assign Checked Songs</string>
    <string name="activity_song_database_assign_rank_done_toast">The selected song has been added to the chosen ranking.</string>
    <string name="menu_song_database_assign_rank_back">Cancel Assign Rank</string>
    <string name="activity_add_song_button_add_song_null_toast">Please enter something before adding.</string>
    <string name="activity_add_song_button_edit_song_null_toast">Please enter something before making change.</string>
    <string name="activity_add_ranking_button_add_ranking_null_toast">Please enter something before naming ranking.</string>
    <string name="activity_rankings_delete_ranking_done_toast">and its ranked songs has been deleted.</string>

    <!-- NOT YET ARRANGED -->

</resources>
