<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAddSong"
        android:enabled="true"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/menu_song_database_add"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemAssignRankBack"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menu_song_database_assign_rank_back"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemFinishChecking"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_song_database_finish_checking"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemAssignRank"
        android:enabled="true"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/menu_song_database_assign_rank"
        android:visible="true"
        app:showAsAction="always" />
</menu>