<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.exoest.songrankmaker.view.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/buttonSongDatabase"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickButtonSongDatabase"
        android:text="@string/activity_main_button_song_database"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRankings"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/buttonRankings"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:onClick="onClickButtonRanking"
        android:text="@string/activity_main_button_rankings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/buttonPreferences"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickButtonSettings"
        android:text="@string/activity_main_button_settings"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonRankings"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
